# talor

./: .claude.md  .gitignore  .prettierignore  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT_DOCUMENTATION.md  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  start_backend.sh  tailwind.config.js  test_mcp_execution.py  tsconfig.json  tsconfig.main.json  vitest.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: CLAUDE.md  code-reviewer.jsonc  (+1 more)
talor/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  config.json  docker-compose.yml  generate_pdf.js  package.json  pyproject.toml  requirements.txt  talor-config.json  talor-config.yaml  talor.spec
talor/desktop/: biome.json  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
talor/desktop/src/main/: chatExecutor.ts  index.ts  types.ts
talor/desktop/src/main/db/: agentRepository.ts  database.ts  providerRepository.ts  sessionRepository.ts
talor/desktop/src/main/ipc/: handlers.ts
talor/desktop/src/preload/: index.d.ts  index.ts
talor/desktop/src/renderer/: App.tsx  global.d.ts  index.html  types.ts
talor/desktop/src/renderer/components/: AgentList.tsx  AgentSelector.tsx  ChatView.tsx  Layout.tsx  MessageItem.tsx  MessageList.tsx  PromptInput.tsx  ProviderSettings.tsx  SessionList.tsx
talor/desktop/src/renderer/store/: agentStore.ts  providerStore.ts  sessionStore.ts
talor/desktop/tests/main/: agentRepository.test.ts  chatExecutor.test.ts  database.test.ts  index.test.ts  ipc.test.ts
talor/desktop/tests/preload/: index.test.ts
talor/desktop/tests/renderer/: app.test.tsx  setup.ts
talor/desktop/tests/renderer/components/: AgentList.test.tsx  AgentSelector.test.tsx  ChatView.test.tsx  Layout.test.tsx  MessageItem.test.tsx  MessageList.test.tsx  PromptInput.test.tsx  ProviderSettings.test.tsx  SessionList.test.tsx
talor/desktop/tests/renderer/store/: agentStore.test.ts  providerStore.test.ts
talor/docs/: ARCHITECTURE.md  REMAINING_TASKS.md  debug-configuration-summary.md  desktop-optimization-completion-summary.md  manual-testing-guide.md  phase-3-4-implementation-guide.md  phase-3-frontend-completion-summary.md  phases-1-3-completion-summary.md  quick-test-checklist.md  task-12.1-12.4-verification.md  task-13.1-13.2-keyring-integration.md  task-15.1-15.5-frontend-implementation.md  task-15.5-general-settings-completion.md  task-8.2-verification.md  task-8.3-8.7-verification.md  task-9.1-9.2-verification.md  test-results-report.md  vscode-debug-setup-completion.md  vscode-debugging-guide.md  workspace-restrictions.md
talor/prompts/: README.md  system.md
talor/prompts/agents/: build.md  explore.md  general.md  plan.md
talor/prompts/llm/: claude3.md  claude35.md  claude4.md  deepseek-r1.md  deepseek-v3.md  default.md  gemini15.md  gemini2-thinking.md  gemini2.md  gemini3.md  gpt4.md  gpt4o.md  gpt5.md  grok.md  llama3.md  llama4.md  mistral-code.md  mistral.md  o1.md  o3.md  qwen-code.md  qwen.md
talor/prompts/memory/: summarize.md
talor/src/: __init__.py
talor/src/agent/: __init__.py  agent.py  executor.py  loop.py  permission.py  service.py
talor/src/api/: __init__.py  app.py  models.py  sse.py
talor/src/api/routes/: __init__.py  agents.py  config.py  events.py  health.py  mcp.py  prompt.py  providers.py  sessions.py  tasks.py  tools.py
talor/src/bus/: __init__.py  bus.py  bus_event.py  events.py  global_bus.py  manager.py
talor/src/cli/: __init__.py  main.py  utils.py
talor/src/cli/commands/: config.py  mcp.py  serve.py
talor/src/config/: __init__.py  config.py  keyring_manager.py  service.py
talor/src/core/: __init__.py  config.py  container.py  errors.py  logging.py  platform.py  state.py  storage.py  workspace.py
talor/src/mcp/: __init__.py  mcp.py
talor/src/mcp_client/: __init__.py  mcp.py  presets.json  tools.py
talor/src/memory/: __init__.py  context.py  short_term.py
talor/src/plugin/: __init__.py  base.py  context.py  loader.py  manager.py  result.py
talor/src/plugin/builtin/: __init__.py  agent.py  environment.py  llm.py  memory.py  skill.py  system.py  tool.py
talor/src/provider/: __init__.py  provider.py  service.py
talor/src/session/: __init__.py  message.py  prompt.py  repository.py  service.py  session.py
talor/src/skill/: __init__.py  loader.py  matcher.py  parser.py  preprocessor.py  registry.py  tool.py
talor/src/task/: __init__.py  service.py  task.py
talor/src/tool/: __init__.py  context.py  output.py  registry.py  tool.py
talor/src/tool/builtin/: __init__.py  bash.py  edit.py  glob.py  grep.py  ls.py  mcp_search.py  read.py  subagent.py  write.py
talor/tests/: __init__.py  conftest.py  test_global_bus_init.py  test_global_bus_integration.py  test_new_architecture.py  test_session_global_bus.py
talor/tests/agent/: test_loop.py
talor/tests/api/: test_config_routes.py  test_events_endpoint.py  test_providers_routes.py
talor/tests/bus/: test_global_bus.py
talor/tests/cli/: test_cli_structure.py  test_formatting_integration.py  test_utils.py
talor/tests/config/: test_config_keyring.py  test_config_workspace_e2e.py  test_keyring_manager.py  test_workspace_integration.py
talor/tests/core/: test_config.py  test_errors.py  test_platform.py  test_storage.py  test_workspace.py  test_workspace_integration.py
talor/tests/integration/: test_auth_flow.py
talor/tests/mcp_client/: test_mcp.py
talor/tests/memory/: test_short_term.py
talor/tests/plugin/: test_builtin.py  test_config.py  test_integration.py  test_loader.py  test_manager.py  test_memory_summarizer.py  test_properties.py
talor/tests/provider/: test_provider.py
talor/tests/skill/: __init__.py  test_loader.py  test_matcher.py  test_parser.py  test_preprocessor.py  test_registry.py  test_skill_tool.py
talor/tests/tool/: test_bash_workspace.py  test_mcp_search.py  test_subagent.py
(+868 files in other folders)
