[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talor"
version = "0.1.0"
description = "Talor - A ReAct-based AI Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Talor Team", email = "team@talor.dev"}
]
maintainers = [
    {name = "Talor Team", email = "team@talor.dev"}
]
keywords = ["ai", "agent", "react", "mcp", "llm", "litellm", "fastmcp", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.19.0",
    "click>=8.1.7",
    "fastapi>=0.109.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",
    "litellm>=1.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "ptyprocess>=0.7.0",
    "pygls>=1.3.0",
    "python-ulid>=2.2.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/talor-dev/talor"
Documentation = "https://talor.dev/docs"
Repository = "https://github.com/talor-dev/talor.git"
Issues = "https://github.com/talor-dev/talor/issues"
Changelog = "https://github.com/talor-dev/talor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
build = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "pyinstaller>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "talor[dev,build,docs]",
]

[project.scripts]
talor = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=talor",
    "--cov-report=html",
    "--cov-report=term",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
